# Datalog_Interpreter

./: .gitignore  Automaton.cpp  Automaton.h  CMakeLists.txt  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Header.cpp  Header.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Token.cpp  Token.h  Tuple.cpp  Tuple.h  main.cpp
